# django-schedule-project

./: LICENSE  docker-compose.yml  pyproject.toml
docker/local/: Dockerfile
src/config/: asgi.py  wsgi.py
src/config/settings/: settings.py
