[tool.poetry]
name = "django-schedule"
version = "0.1.0"
description = "Django schedule project using Django"
authors = ["andresbermeoq <andresbermeoq1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.6"
asgiref = "^3.8.1"
django-model-utils = "^4.5.1"
psycopg2-binary = "^2.9.9"
pytz = "^2024.1"
sqlparse = "^0.5.0"
unipath = "^1.1"
django-environ = "^0.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
